cleaning the main class